# X-SCAPE

./: .bash_history  .gitignore  .viminfo  CMakeLists.txt  CONTRIBUTING.md  JetScapeDoxy.conf  README-ISR.md  README.md  activate_jetscape.sh
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  (+1 more)
ResultFolder/: OnTheFlyRun.xml  SavedVFlyRun.xml  entropy_evol_initialstage1.py  flowProfile_withArrow.py
cmakemodules/: FindSMASH.cmake
config/: jetscape_main.xml  jetscape_master.xml  jetscape_user.xml  jetscape_user_3DGlauber_MUSIC_iSS_SMASH_test.xml  jetscape_user_DIS.xml  jetscape_user_EP.xml  jetscape_user_HydroFile.xml  jetscape_user_IPGlasmaMUSIC.xml  jetscape_user_MCGlauberMUSIC.xml  jetscape_user_MUSICMainClockTest.xml  jetscape_user_PP19.xml  jetscape_user_brick_hybrid_hadronization.xml  jetscape_user_gamma_test.xml  jetscape_user_iMATTERMCGlauber.xml  jetscape_user_iMATTERMCGlauberMUSIC.xml  jetscape_user_photoproduction.xml  jetscape_user_sims.xml  jetscape_user_test.xml  jetscape_user_test_smash_RC1_1.xml
docker/: Dockerfile.base
examples/: PythiaIsrTest.cc  chargedpdg_table  readerTest.cc  runJetscape.cc
external_packages/: README.md  get_3dglauber.sh  get_freestream-milne.sh  get_iSS.sh  get_lbtTab.sh  get_music.sh  get_smash.sh
script/: Generate_jobs.py  Generate_xml.py  fastjet_ALICE_pp.cc  jetscape_priori_range  main_get_hard_hadron_yield.cc  main_get_soft_hadron_yield.cc
src/: CMakeLists.txt
src/root/: CMakeLists.txt  JetScapeRootLinkDef.h  JetScapeWriterRoot.h  JetScapeWriterRootHepMC.cc  JetScapeWriterRootHepMC.h
test/: generate_plots.sh
(+279 files in other folders)
